LRP-4991 Adjust environment variable JAVA_OPTS based on JDK version